@@ -471,3 +471,6 @@ notice.background.colour.text=Notice background colour
 notice.position.text=Notice position
 notice.font.size=Notice font size
 notice.options.heading=Notices
+export.pdf.button=Export to PDF
+export.schedule.pdf.button=Export Schedule to PDF
+filefilters.description.pdf.files=PDF Files
