@@ -45,6 +45,10 @@ public final class FileFilters {
      */
     public static final FileChooser.ExtensionFilter XML_GENERIC = new FileChooser.ExtensionFilter(LabelGrabber.INSTANCE.getLabel("filefilters.description.xml.files") + " (*.xml)", "*.xml");
     /**
+     * Accept generic PDF files.
+     */
+    public static final FileChooser.ExtensionFilter PDF_GENERIC = new FileChooser.ExtensionFilter(LabelGrabber.INSTANCE.getLabel("filefilters.description.pdf.files") + " (*.pdf)", "*.pdf");
+    /**
      * Accept video files.
      */
     public static final FileChooser.ExtensionFilter VIDEOS = new FileChooser.ExtensionFilter(LabelGrabber.INSTANCE.getLabel("filefilters.description.video.files"), Utils.getFileExtensions(Utils.getVideoExtensions()));
